fix: adjust overflow properties for split-panel and content cards

--- a/static/css/project.css
+++ b/static/css/project.css
@@ -494,7 +494,7 @@
 }
 
 .split-panel {
-    overflow: auto;
+    overflow: hidden;
     padding: 20px;
     position: relative;
 }
@@ -531,22 +531,30 @@
     color: var(--accent-color);
 }
 
+.my-el-splitter {
+    overflow: hidden;
+}
+
 /* 内容样式 */
 .content-card-doc {
+    height: 90%;
     background-color: white;
     border-radius: 6px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     padding-top: 5px;
     padding-left: 25px;
     margin-bottom: 20px;
+    overflow-y: scroll;
 }
 
 .content-card-code{
+    height: 90%;
     background-color: white;
     border-radius: 6px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     padding: 2px;
     margin-bottom: 20px;
+    overflow-y: scroll;
 }
 
 .content-header {
